Fix ground height on mobile

--- a/src/app/components/celestial-bg/earth/earth.scss
+++ b/src/app/components/celestial-bg/earth/earth.scss
@@ -1,28 +1,14 @@
 $angular-diameter: 179.92134;
 $diameter: calc(tan($angular-diameter * pi/360) * 5vmin * 360/pi);
 
-@mixin ground {
-  filter: brightness(var(--brightness));
-  z-index: 99;
-}
-
-.earth {
-  width: $diameter;
-  height: $diameter;
-  position: absolute;
-  top: 90vh;
-  left: calc(50vw - $diameter / 2);
-  border-radius: 100%;
-  @include ground;
-}
-
 svg {
   position: absolute;
   bottom: 0;
-  height: 20vh;
+  height: 20vmin;
   left: calc(50vw - 540vmin);
   width: 1080vmin;
-  @include ground;
+  filter: brightness(var(--brightness));
+  z-index: 99;
 }
 
 .sky {
